<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">

    <!-- Título del formulario -->
    <TextView
        android:id="@+id/textViewFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- TextV Nombre -->
    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/textViewFormulario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- TextV Apellido -->
    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        app:layout_constraintTop_toBottomOf="@id/textViewNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- TextV Correo -->
    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        app:layout_constraintTop_toBottomOf="@id/textViewApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Campo Nombre -->
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        android:minHeight="48dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textViewCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextApellido"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp" />

    <!-- Campo Apellido -->
    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Apellido"
        android:minHeight="48dp"
        android:autofillHints="familyName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textViewCorreo"
        app:layout_constraintStart_toEndOf="@id/editTextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp" />

    <!-- Campo Correo -->
    <EditText
        android:id="@+id/editTextCorreoInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Correo"
        android:minHeight="48dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón Registrar -->
    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrar"

        app:layout_constraintTop_toBottomOf="@id/editTextCorreoInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

